--- a/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
+++ b/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
@@ -151,6 +151,13 @@
             </li>
 
             <li class="cambista-item">
+                <a [routerLink]="['/copiar-aposta']" routerLinkActive="router-link-active">
+                    <i class="fa fa-calendar-check icone-generico"></i>
+                    <span class="regiao-nome">Copiar Loteria</span>
+                </a>
+            </li>
+
+            <li class="cambista-item">
                 <a [routerLink]="['/cambistas/apuracao']" routerLinkActive="router-link-active">
                     <i class="fa fa-calendar-check icone-generico"></i>
                     <span class="regiao-nome">{{'geral.apuracao' | translate}}</span>
