--- a/src/app/clientes/promocao/promocao.component.html
+++ b/src/app/clientes/promocao/promocao.component.html
@@ -234,6 +234,7 @@
                                         <th data-field="game" (click)="sortBy('game')"><span style="cursor: pointer;">{{ 'geral.jogo' | translate }} &uarr;&darr;</span></th>
                                         <th data-field="status" (click)="sortBy('status')"><span style="cursor: pointer;">Status &uarr;&darr;</span></th>
                                         <th></th>
+                                        <th></th>
                                     </tr>
                                 </thead>
                                 <tr *ngIf="loading">
@@ -267,6 +268,13 @@
                                                     <button class="btn btn-custom btn-jogar-rodada"
                                                         [ngClass]="rodada.status != 'Ativo' ? 'disabled-button' : ''"
                                                         (click)="openGame(rodada.gameFront, rodada.fornecedorFront)">{{ 'geral.jogarAgora' | translate }}</button>
+                                                </ng-container>
+                                            </td>
+                                            <td style="text-align: center; max-width: 80px;">
+                                                <ng-container>
+                                                    <button class="btn btn-custom btn-jogar-rodada"
+                                                        [ngClass]="rodada.status != 'Concluído' ? 'disabled-button' : ''"
+                                                        (click)="openGame(rodada.gameFront, rodada.fornecedorFront)">{{ 'geral.resgatarPremio' | translate }}</button>
                                                 </ng-container>
                                             </td>
                                         </tr>
