--- a/src/app/copiar-aposta/wrapper/copiar-aposta-wrapper.component.html
+++ b/src/app/copiar-aposta/wrapper/copiar-aposta-wrapper.component.html
@@ -3,13 +3,13 @@
         <a (click)="activeModal.dismiss('Cross click')" class="botao-esquerdo">
             <i class="fa fa-arrow-left"></i>
         </a>
-        <div class="titulo">{{'geral.copiarAposta' | translate}}</div>
+        <div class="titulo">{{'geral.copiarApostaLoteria' | translate}}</div>
         <div class="botao-direito"></div>
     </div>
 
     <div class="internal-container-out">
         <div class="content-header hide-mobile">
-            <h2>{{'geral.copiarAposta' | translate}}</h2>
+            <h2>{{'geral.copiarApostaLoteria' | translate}}</h2>
         </div>
         <div class="content-body">
             <div class="content">
