--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -217,7 +217,7 @@
                                 <span>
                                     <i class="fa fa-solid fa-copy"></i>
                                 </span>
-                                {{'geral.copiarAposta' | translate}}
+                                {{'geral.copiarApostaLoteria' | translate}}
                                 <span class="arrow-nav">
                                     <i class="fa-solid fa-angle-right"></i>
                                 </span>
@@ -545,8 +545,8 @@
                             <a class="dropdown-btn-filled" [routerLink]="['/copiar-aposta']"
                                routerLinkActive="router-link-active"
                                *ngIf="!isCliente">
-                                <i class="fa fa-solid fa-table-columns mb-2"></i>
-                               Copiar Loteria
+                                <i class="fa fa-solid fa-copy mb-2"></i>
+                                {{'geral.copiarApostaLoteria' | translate}}
                             </a>
                             <a class="dropdown-btn-filled" [routerLink]="['cambistas/apuracao']"
                             routerLinkActive="router-link-active"
