--- a/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
+++ b/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
@@ -152,8 +152,8 @@
 
             <li class="cambista-item">
                 <a [routerLink]="['/copiar-aposta']" routerLinkActive="router-link-active">
-                    <i class="fa fa-calendar-check icone-generico"></i>
-                    <span class="regiao-nome">Copiar Loteria</span>
+                    <i class="fa fa-copy icone-generico"></i>
+                    <span class="regiao-nome">{{'geral.copiarApostaLoteria' | translate}}</span>
                 </a>
             </li>
 
