--- a/src/app/copiar-aposta/loterias/copiar-aposta-loterias.component.html
+++ b/src/app/copiar-aposta/loterias/copiar-aposta-loterias.component.html
@@ -2,36 +2,47 @@
     <div class="loteria">
         <div formArrayName="preApostaItens" class="palpites">
             <div *ngFor="let item of preApostaItens.controls; let i = index" [formGroupName]="i" class="item-selecionado">
-                <div>
-                    <div class="form-group col-xs-12 col-lg-4">
+                <div class="row">
+                    <div class="form-group col-lg-4">
+                        <label>Sorteio:</label>
                         <select class="form-control inverted-out" formControlName="sorteio_id">
+                            <option value="">Selecione um sorteio</option>
                             <option *ngFor="let sorteio of sorteios" [value]="sorteio.id">{{sorteio.nome}}</option>
                         </select>
                     </div>
-                    <div>
+                    <div class="form-group col-lg-4">
                         <label>Valor:</label>
-                        <input class="form-control inverted-out" type="number" formControlName="valor" (change)="updateEstimativaGanho(item, i)" />
+                        <input class="form-control inverted-out custom-width-value" type="number" formControlName="valor" (change)="updateEstimativaGanho(item, i)" />
                     </div>
+                </div>
+                <div class="row">
                     <div class="circle-group">
-                        <div class="circle" *ngFor="let numero of item.get('numeros').value">
-                            <div class="content">
-                                {{numero | number:'2.0'}}
-                            </div>
+                        <label class="mr-2">Palpites:</label>
+                        <div class="d-inline">
+                            <ng-container *ngFor="let numero of item.get('numeros').value; let last = last">
+                                <div class="circle d-inline-block mr-2">
+                                    <div class="content">
+                                        {{numero | number:'2.0'}}{{!last ? '-' : ''}}
+                                    </div>
+                                </div>
+                            </ng-container>
                         </div>
                     </div>
-                    <div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4">
                         <label>Retorno 6: </label>
                         <span>{{calcularEstimativaGanho(item.get('cotacao6').value, item.get('valor').value) | currency}}</span>
                     </div>
-                    <div>
+                    <div class="col-lg-4">
                         <label>Retorno 5: </label>
                         <span>{{calcularEstimativaGanho(item.get('cotacao5').value, item.get('valor').value) | currency}}</span>
                     </div>
-                    <div>
+                    <div class="col-lg-4">
                         <label>Retorno 4: </label>
                         <span>{{calcularEstimativaGanho(item.get('cotacao4').value, item.get('valor').value) | currency}}</span>
                     </div>
-                    <div>
+                    <div class="col-lg-4">
                         <label>Retorno 3: </label>
                         <span>{{calcularEstimativaGanho(item.get('cotacao3').value, item.get('valor').value) | currency}}</span>
                     </div>
@@ -44,7 +55,7 @@
         <div class="informacoes">
             <p>{{'geral.horario' | translate}}: {{preAposta.horario | moment: 'DD/MM/YYYY HH:mm'}}</p>
             <p>Total de palpites: {{preApostaItens.length}}</p>
-            <div class="form-group">
+            <div class="form-group col-lg-4">
                 <label>{{'geral.apostador' | translate}}</label>
                 <input type="text" class="form-control inverted-out" formControlName="apostador" [ngClass]="applyCssInputError('apostador')">
                 <app-error-msg [control]="form.get('apostador')" label="{{'geral.apostador' | translate}}"></app-error-msg>
