--- a/src/app/auth/resetar-senha/resetar-senha.component.html
+++ b/src/app/auth/resetar-senha/resetar-senha.component.html
@@ -6,24 +6,41 @@
                     <h2>{{'senhas.redefinirSenha' | translate}}</h2>
                 </div>
             </div>
-            <form [formGroup]="form" (ngSubmit)="onSubmit()">
+            <form [formGroup]="form" (ngSubmit)="nextStep()">
                 <app-spinner *ngIf="submitting"></app-spinner>
-                <div class="inputs">
+                <div class="inputs" *ngIf="stepIsOne">
                     <div class="row">
                         <div class="col col-sm-2">
                             <div class="form-group required">
-                                <label class="label">{{'senhas.codigoDeVerificacao' | translate}}</label>
-                                <input type="text" formControlName="verificacao" class="form-control inverted-out" maxlength="5">
+                                <label class="label">
+                                    {{'senhas.codigoDeVerificacao' | translate}}
+                                </label>
+                                <input
+                                    type="text"
+                                    formControlName="verificacao"
+                                    class="form-control inverted-out"
+                                    maxlength="5"
+                                >
                             </div>
                             <app-error-msg [control]="form.get('verificacao')"></app-error-msg>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col col-sm-4">
-                            <label class="label">{{'senhas.novaSenha' | translate}}</label>
+                            <label class="label">
+                                {{'senhas.novaSenha' | translate}}
+                            </label>
                             <div class="form-group required">
-                                <input [type]="mostrarSenha ? 'text' : 'password'" formControlName="nova_senha" class="form-control inverted-out">
-                                <i class="fa showPassword" [ngClass]="mostrarSenha ? 'fa-eye-slash' : 'fa-eye'" (click)="mostrarSenha = !mostrarSenha"></i>
+                                <input
+                                    [type]="mostrarSenha ? 'text' : 'password'"
+                                    formControlName="nova_senha"
+                                    class="form-control inverted-out"
+                                >
+                                <i
+                                    class="fa showPassword"
+                                    [ngClass]="mostrarSenha ? 'fa-eye-slash' : 'fa-eye'"
+                                    (click)="mostrarSenha = !mostrarSenha"
+                                ></i>
                             </div>
                             <app-error-msg [control]="form.get('nova_senha')"></app-error-msg>
                         </div>
@@ -32,17 +49,57 @@
                         <div class="col col-sm-4">
                             <label class="label">{{'senhas.confirmarSenha' | translate}}</label>
                             <div class="form-group required">
-                                <input [type]="mostrarSenhaConfirmar ? 'text' : 'password'" formControlName="senha_confirmacao" class="form-control inverted-out">
-                                <i class="fa showPassword" [ngClass]="mostrarSenhaConfirmar ? 'fa-eye-slash' : 'fa-eye'" (click)="mostrarSenhaConfirmar = !mostrarSenhaConfirmar"></i>
+                                <input
+                                    [type]="mostrarSenhaConfirmar ? 'text' : 'password'"
+                                    formControlName="senha_confirmacao"
+                                    class="form-control inverted-out"
+                                >
+                                <i
+                                    class="fa showPassword"
+                                    [ngClass]="mostrarSenhaConfirmar ? 'fa-eye-slash' : 'fa-eye'"
+                                    (click)="mostrarSenhaConfirmar = !mostrarSenhaConfirmar"
+                                ></i>
                             </div>
                             <app-error-msg [control]="form.get('senha_confirmacao')"></app-error-msg>
                         </div>
                     </div>
                 </div>
+
+                <div class="inputs" *ngIf="stepIsTwo">
+                    <div class="row">
+                        <div class="col col-sm-2">
+                            <div class="form-group required">
+                                <label class="label">
+                                    {{'senhas.codigoDeVerificacaoPorSms' | translate}}
+                                </label>
+                                <input
+                                    type="text"
+                                    formControlName="verificacao2"
+                                    class="form-control inverted-out"
+                                    maxlength="5"
+                                    [readOnly]="submitting"
+                                >
+                            </div>
+                            <app-error-msg [control]="form.get('verificacao2')"></app-error-msg>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="row buttons">
                     <div class="col col-md-12">
                         <div class="form-group">
-                            <button class="btn btn-custom" type="submit" [disabled]="submitting">
+                            <button
+                                *ngIf="stepIsTwo"
+                                class="btn btn-custom margin-right-10"
+                                (click)="toBack()"
+                            >
+                                {{'botoes.voltar' | translate}}
+                            </button>
+                            <button
+                                class="btn btn-custom"
+                                type="submit"
+                                [disabled]="submitting"
+                            >
                                 {{'geral.alterarSenha' | translate}}
                             </button>
                         </div>
