feat: aplicando autenticação de dois fatores na editção do perfil

--- a/src/app/clientes/configuracoes/configuracoes.component.css
+++ b/src/app/clientes/configuracoes/configuracoes.component.css
@@ -98,3 +98,12 @@
         flex-wrap: wrap;
     }
 }
+
+.showPassword {
+    position: absolute;
+    top: calc(50% - 16px);;
+    right: 0;
+    color: var(--foreground-inputs-odds);
+    cursor: pointer;
+    padding: 10px;
+}
