style: ajustes nos css

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -4,6 +4,8 @@
   --color-background: rgba(10, 10, 10, 1);
   --color-primary: rgba(11, 229, 142, 1);
   --color-text: rgb(255, 255, 255, 1);
+  --color-text-input: rgba(255, 255, 255, 0.5);
+  --color-background-input: rgb(24, 24, 24);
 }
 
 // reset css
@@ -30,21 +32,4 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-input {
-  background-color: #181818;
-  box-sizing: border-box;
-  border: none;
-  border-radius: 5px;
-  transition: 0.5s;
-  outline: none;
-  box-shadow: none;
-  -moz-box-shadow: none;
-  -webkit-box-shadow: none;
-  -webkit-transition: 0.5s;
-  font-size: 14px;
-  font-weight: 400;
-  color: rgba(255, 255, 255, 0.5);
-    
 }
