--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -1,11 +1,11 @@
 
 /* semantic color variables for this project */
 :root {
-  --color-background: rgba(10, 10, 10, 1);
-  --color-primary: rgba(11, 229, 142, 1);
-  --color-text: rgb(255, 255, 255, 1);
-  --color-text-input: rgba(255, 255, 255, 0.5);
-  --color-background-input: rgb(24, 24, 24);
+  --color-background: #0a0a0a;
+  --color-primary: #0be58e;
+  --color-text: #ffffff;
+  --color-text-input: #ffffff80;
+  --color-background-input: #181818;
 }
 
 // reset css
