--- a/src/app/loterias/quininha/quininha.component.css
+++ b/src/app/loterias/quininha/quininha.component.css
@@ -158,4 +158,8 @@ input, select {
     .btn-surpresinha i {
         margin-left: 0;
     }
+
+    .replicar-aposta {
+        width: 100%;
+    }
 }
