--- a/src/app/loterias/seninha/seninha.component.css
+++ b/src/app/loterias/seninha/seninha.component.css
@@ -143,4 +143,8 @@ input, select {
     .btn-surpresinha i {
         margin-left: 0;
     }
+
+    .replicar-aposta {
+        width: 100%;
+    }
 }
