--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,6 +1,33 @@
-@import './base.scss';
+@import './variables.scss';
 
 #app {
   width: 100%;
   height: 100vh;
+  background: var(--color-background);
+}
+
+// reset css
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  font-weight: normal;
+}
+
+body {
+  min-height: 100vh;
+  color: var(--color-text);
+  background: var(--color-background);
+  margin: 0;
+  padding: 0;
+  transition:
+    color 0.5s,
+    background-color 0.5s;
+  line-height: 1.6;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
